SERVER-25951 Report additional metrics in getMore slowms logging